--- a/src/widgets/AdminSidebar/AdminSidebar.module.scss
+++ b/src/widgets/AdminSidebar/AdminSidebar.module.scss
@@ -27,10 +27,11 @@
 .links {
   display: flex;
   flex-direction: column;
-  gap: rem(30);
+  gap: rem(10);
   margin-top: rem(50);
   color: #fff;
   @include gilroy(400);
+  cursor: default;
 }
 .link {
   cursor: pointer;
@@ -39,9 +40,25 @@
   display: flex;
   align-items: center;
   gap: rem(10);
+  padding: rem(10);
 
   &:hover {
     opacity: 0.8;
+  }
+
+  &.active {
+    background-color: #fff;
+    border-radius: rem(8);
+    color: #000;
+
+    .icon {
+      color: #000;
+      fill: #000;
+    }
+  }
+
+  &:last-child {
+    margin-top: rem(20);
   }
 }
 .icon {
