--- a/src/app/admin/kitchens/Kitchens.module.scss
+++ b/src/app/admin/kitchens/Kitchens.module.scss
@@ -1,9 +1,10 @@
 @import "@/shared/styles/_vars";
 
 .kitchensPage {
-  height: 100vh;
+  min-height: 100vh;
   padding-top: rem(50);
   background-color: #433a31;
+  padding-bottom: rem(50);
 }
 .preloader {
   width: rem(100);
@@ -12,14 +13,24 @@
   font-size: rem(42);
   color: #fff;
   @include gilroy(400);
+  margin-bottom: rem(30);
 }
 .container {
   @include container();
   padding-left: rem(320);
+  margin: 0;
 
   @media (max-width: $max-768) {
     padding-left: rem(320);
   }
+}
+.error {
+  font-size: rem(20);
+  color: red;
+}
+.success {
+  font-size: rem(20);
+  color: green;
 }
 .authText {
   color: #fff;
@@ -53,47 +64,170 @@
 }
 .addForm {
   margin-top: rem(30);
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto;
+  display: flex;
+  flex-direction: column;
   gap: rem(30);
+}
+.string {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: rem(10);
 }
 .inputWrapper {
   display: flex;
   align-items: flex-start;
   gap: rem(20);
+  position: relative;
 }
 .label {
   @include gilroy(400);
   cursor: default;
-  font-size: rem(18);
+  font-size: rem(16);
   color: #fff;
+  text-wrap: pretty;
+  white-space: nowrap;
+  min-width: rem(100);
 }
 .textInput {
   background-color: #fff;
   color: #000;
-  font-size: rem(18);
+  font-size: rem(16);
   padding: rem(10) rem(20);
   border-radius: rem(8);
   border: 0;
   outline: none;
+
+  &.fullInput {
+    width: 100%;
+  }
 }
 .textArea {
   background-color: #fff;
   color: #000;
-  font-size: rem(18);
+  font-size: rem(16);
   padding: rem(10) rem(20);
   border-radius: rem(8);
   border: 0;
   outline: none;
   resize: none;
+  width: 100%;
+  min-height: rem(150);
 }
 .select {
   background-color: #fff;
   color: #000;
-  font-size: rem(18);
+  font-size: rem(16);
   border-radius: rem(8);
   border: 0;
   outline: none;
   width: 100%;
+}
+.inputPhotos {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+.clue {
+  font-size: rem(20);
+  color: #fff;
+  cursor: text;
+}
+.labelPhotos {
+  background-color: #fff;
+  border-radius: rem(8);
+  width: 100%;
+  padding: rem(10);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken(#fff, 10%);
+  }
+}
+.photosPreview {
+  width: 100%;
+  display: flex;
+  gap: rem(20);
+  height: rem(300);
+  overflow-x: scroll;
+  -ms-scroll-snap-points-x: repeat(100%);
+  scroll-snap-points-x: repeat(100%);
+  scroll-behavior: smooth;
+  -ms-scroll-snap-type: x mandatory;
+  scroll-snap-type: x mandatory;
+  -webkit-scroll-snap-type: x mandatory;
+  -webkit-scroll-snap-points-x: repeat(100%);
+  padding: rem(20);
+  background-color: #fff;
+  border-radius: rem(8);
+}
+.photo {
+  flex: 0 0 30%;
+  min-width: rem(200);
+  height: 100%;
+  width: 100%;
+  scroll-snap-align: start;
+  border-radius: rem(8);
+  position: relative;
+  aspect-ratio: 1/1.3;
+  overflow: hidden;
+
+  &:hover {
+    .photoTitle {
+      transform: translate(0);
+    }
+  }
+}
+.previewPhoto {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.deleteButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  color: #fff;
+  @include gilroy(400);
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: rem(30);
+  padding: rem(10);
+  line-height: 0.5;
+  border-radius: rem(8);
+}
+.photoTitle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: rem(12);
+  padding: rem(4);
+  cursor: text;
+  transform: translate(0, 100%);
+  transition: transform 0.1s;
+}
+
+.kitchens {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  gap: rem(30);
+}
+.kitchenLink {
+  width: 100%;
+  max-width: rem(460);
 }
