--- a/src/widgets/Kitchen/Kitchen.module.scss
+++ b/src/widgets/Kitchen/Kitchen.module.scss
@@ -7,6 +7,7 @@
   object-fit: cover;
   height: 100%;
   position: relative;
+  cursor: pointer;
 
   &:first-child {
     grid-area: one;
@@ -24,6 +25,7 @@
     grid-area: five;
   }
 }
+
 .betweenWrapper {
   display: flex;
   align-items: flex-end;
