--- a/src/widgets/Kitchens/Kitchens.module.scss
+++ b/src/widgets/Kitchens/Kitchens.module.scss
@@ -125,10 +125,10 @@
       "two";
 
     & > div {
-      &:nth-child(3n) {
+      &:nth-child(3) {
         display: none;
       }
-      &:nth-child(4n) {
+      &:nth-child(4) {
         display: none;
       }
       &:last-child {
