--- a/src/widgets/PreviewPhotos/PreviewPhotos.module.scss
+++ b/src/widgets/PreviewPhotos/PreviewPhotos.module.scss
@@ -5,7 +5,7 @@
   color: #fff;
   font-size: rem(54);
   position: absolute;
-  top: rem(100);
+  top: 0;
   right: rem(-10);
   z-index: 10;
   border: 0;
