--- a/src/widgets/AllVariants/AllVariant.module.scss
+++ b/src/widgets/AllVariants/AllVariant.module.scss
@@ -248,9 +248,10 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: rem(250);
+  max-width: rem(150);
   aspect-ratio: 1/1;
-  transform: scale(1.2);
+  margin: 0 auto;
+  transform: scale(1.3);
 
   @media (max-width: $max-900) {
     display: none;
