--- a/src/widgets/KitchenExamples/KitchenExamples.module.scss
+++ b/src/widgets/KitchenExamples/KitchenExamples.module.scss
@@ -158,18 +158,19 @@
 }
 .allKitchens {
   margin: 0 auto;
-  display: flex;
-  align-items: stretch;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 49%);
+  grid-template-rows: auto;
   gap: rem(20);
-  flex-wrap: wrap;
   margin-top: rem(30);
   max-width: rem(940);
   width: 100%;
+
+  @media (max-width: $max-900) {
+    grid-template-columns: 100%;
+  }
 }
 .kitchenWrapper {
-  flex: 0 0 40%;
-  max-width: rem(460);
   width: 100%;
   height: rem(500);
 }
