fix: исправлена верстка

--- a/src/app/admin/kitchens/Kitchens.module.scss
+++ b/src/app/admin/kitchens/Kitchens.module.scss
@@ -231,6 +231,7 @@
   width: 100%;
   max-width: rem(460);
   position: relative;
+  max-height: rem(500);
 }
 .removeButton {
   background-color: #fff;
