--- a/src/app/admin/Page.module.scss
+++ b/src/app/admin/Page.module.scss
@@ -231,10 +231,13 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  gap: rem(50);
 }
 .reviewLink {
-  width: auto;
   display: flex;
+  position: relative;
+  cursor: pointer;
+  width: 100%;
 }
 .kitchenLink {
   width: 100%;
@@ -253,7 +256,20 @@
   position: absolute;
   top: rem(20);
   right: rem(20);
-  z-index: 2;
+  z-index: 10;
+}
+.removeReviewButton {
+  background-color: #fff;
+  padding: rem(10);
+  border-radius: rem(8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 1/1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
 }
 .removeIcon {
   position: relative;
