fix: исправление верстки

--- a/src/widgets/Reviews/Reviews.module.scss
+++ b/src/widgets/Reviews/Reviews.module.scss
@@ -238,6 +238,7 @@
   right: 0;
   z-index: 2 !important;
   max-width: rem(550);
+  width: 100%;
   max-height: rem(350);
   border-radius: rem(6);
   overflow: hidden;
