--- a/src/app/admin/claims/Claims.module.scss
+++ b/src/app/admin/claims/Claims.module.scss
@@ -38,3 +38,9 @@
   font-size: rem(20);
   cursor: text;
 }
+.error {
+  font-size: rem(20);
+  color: red;
+  margin-top: rem(20);
+  cursor: text;
+}
