--- a/src/app/admin/Page.module.scss
+++ b/src/app/admin/Page.module.scss
@@ -385,3 +385,120 @@
   font-size: rem(20);
   color: #fff;
 }
+.editor {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  min-height: rem(500);
+  border-radius: rem(6);
+  padding-top: rem(10);
+
+  & div:last-child {
+    height: 100%;
+    padding-top: rem(20);
+    padding: rem(10);
+    min-height: rem(400);
+    cursor: text;
+    background-color: #efefef;
+    border-radius: rem(6);
+
+    outline: none;
+    border: none;
+  }
+
+  & ul,
+  ol {
+    padding: 0 1rem;
+  }
+
+  & ul {
+    list-style: disc;
+  }
+  & ol {
+    list-style: decimal;
+  }
+
+  // & li::marker {
+  //   color: #000; /* Change the color */
+  //   font-weight: bold; /* If you want it to be bold */
+  //   display: inline-block; /* Needed to add space between the bullet and the text */
+  //   width: 1em; /* Also needed for space (tweak if needed) */
+  //   margin-left: -1em; /* Also needed for space (tweak if needed) */
+  // }
+
+  & h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: 1.1;
+  }
+
+  & h1 {
+    font-size: rem(40);
+  }
+
+  & h2 {
+    font-size: rem(34);
+  }
+
+  & h3 {
+    font-size: rem(28);
+  }
+
+  & h4 {
+    font-size: ren(24);
+  }
+
+  & h5 {
+    font-size: rem(20);
+  }
+
+  & h6 {
+    font-size: rem(18);
+  }
+
+  & code {
+    background-color: rgba(#616161, 0.1);
+    color: #616161;
+  }
+
+  & a {
+    color: #0095ff;
+  }
+
+  & pre {
+    background: #0d0d0d;
+    color: #fff;
+    font-family: "JetBrainsMono", monospace;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+
+    & code {
+      color: inherit;
+      padding: 0;
+      background: none;
+      font-size: 0.8rem;
+    }
+  }
+
+  & img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  & blockquote {
+    padding-left: 1rem;
+    border-left: 2px solid rgba(#0d0d0d, 0.1);
+  }
+
+  & hr {
+    border: none;
+    border-top: 2px solid rgba(#0d0d0d, 0.1);
+    margin: 2rem 0;
+  }
+}
+.bulletList {
+  color: red;
+}
