--- a/src/widgets/Articles/Articles.module.scss
+++ b/src/widgets/Articles/Articles.module.scss
@@ -15,6 +15,11 @@
   max-width: rem(1260);
   width: 100%;
   margin: 0 auto;
+  padding: 0 rem(20);
+
+  @media (max-width: $max-768) {
+    padding: 0 rem(15);
+  }
 }
 .titleWrapper {
   max-width: rem(660);
@@ -27,6 +32,11 @@
   line-height: 1.3;
   color: #fff;
   font-size: rem(41);
+
+  @media (max-width: $max-768) {
+    font-size: rem(24);
+    font-weight: 300;
+  }
 }
 .subtitle {
   @include gilroy(400);
@@ -34,6 +44,10 @@
   font-size: rem(20);
   color: #fff;
   margin-top: rem(15);
+
+  @media (max-width: $max-768) {
+    font-size: rem(18);
+  }
 }
 .error {
   @include gilroy(400);
@@ -51,9 +65,21 @@
   row-gap: rem(56);
   margin: 0 auto;
   margin-top: rem(50);
+  justify-items: center;
+
+  @media (max-width: $max-1000) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: $max-768) {
+    grid-template-columns: 1fr;
+  }
+}
+.articleLink {
+  max-width: rem(390);
+  width: 100%;
 }
 .articleCard {
-  max-width: rem(390);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -68,6 +94,11 @@
   overflow: hidden;
   -o-object-position: center;
   object-position: center;
+  position: relative;
+
+  @media (max-width: $max-768) {
+    height: rem(200);
+  }
 }
 .image {
   width: 100%;
@@ -76,16 +107,39 @@
   object-fit: cover;
   -o-object-position: center;
   object-position: center;
+  -webkit-mask: linear-gradient(
+    0deg,
+    rgba(40, 35, 32, 0.4) 0%,
+    rgba(40, 35, 32, 1) 56.4%,
+    rgba(40, 35, 32, 0.4) 100%
+  );
+  mask: linear-gradient(
+    0deg,
+    rgba(40, 35, 32, 0.4) 0%,
+    rgba(40, 35, 32, 1) 56.4%,
+    rgba(40, 35, 32, 0.4) 100%
+  );
 }
 .viewCount {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: rem(5);
   @include gilroy(500);
   line-height: 1;
   opacity: 0.4;
   color: #fff;
+  position: absolute;
+  z-index: 2;
+  bottom: rem(10);
+  right: rem(8);
+  font-size: rem(16);
+  cursor: pointer;
+
+  & svg {
+    width: rem(20);
+  }
 }
+
 .cardDescription {
   color: #fff;
   @include gilroy(300);
@@ -94,12 +148,74 @@
   line-height: 1.5;
   @include strings(6);
 }
+.cardTitleWrapper {
+  display: flex;
+  align-items: flex-start;
+  gap: rem(16);
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: rem(20);
+
+  @media (max-width: $max-768) {
+    margin-top: rem(32);
+  }
+
+  & svg {
+    min-width: rem(20);
+    width: rem(20);
+    height: 100%;
+    color: #fff;
+    margin-top: 0.5em;
+  }
+}
 .cardTitle {
   @include gilroy(700);
   color: #fff;
   cursor: pointer;
   font-size: rem(24);
   line-height: 1.5;
-  margin-top: rem(20);
   @include strings(3);
+
+  @media (max-width: $max-768) {
+    font-size: rem(20);
+  }
+}
+.cardDescription {
+  @include gilroy(300);
+  font-size: rem(16);
+  line-height: 1.5;
+  margin-top: rem(12);
+  @include strings(4);
+  cursor: pointer;
+}
+
+.buttonWrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: rem(30);
+}
+.orangeButton {
+  color: #fff;
+  font-weight: 700;
+  max-width: rem(270);
+  @include orange-gradient();
+  padding: rem(30) rem(40);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: rem(12);
+  text-align: center;
+  border-radius: rem(100);
+  font-size: rem(14);
+  text-transform: uppercase;
+  text-decoration: none;
+  width: 100%;
+  transition: 0.2s;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0);
+
+  &:hover {
+    border: 1px solid rgba(255, 255, 255, 0.6);
+  }
 }
