fix: оптимизация картинок

--- a/src/widgets/AllVariants/AllVariant.module.scss
+++ b/src/widgets/AllVariants/AllVariant.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   background-color: #433a31;
   min-height: rem(1000);
-  background-image: url("../../data/images/bg1.jpg");
+  background-image: url("../../data/images/bg1.webp");
   background-size: cover;
   background-repeat: no-repeat;
 }
