--- a/src/widgets/Modals/Modal.module.scss
+++ b/src/widgets/Modals/Modal.module.scss
@@ -87,7 +87,7 @@
   border-radius: rem(20);
 }
 .card2 {
-  background-image: url("../../data/images/mini-modal.png");
+  background-image: url("../../data/images/mini-modal.webp");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   -webkit-filter: drop-shadow(0px 4px 60px rgba(221, 213, 203, 0.26));
