--- a/src/widgets/WhatsNext/WhatsNext.module.scss
+++ b/src/widgets/WhatsNext/WhatsNext.module.scss
@@ -21,7 +21,7 @@
 
 .firstBlock {
   position: relative;
-  background-image: url("../../data/images/bg-man.png");
+  background-image: url("../../data/images/bg-man.webp");
   background-repeat: no-repeat;
   background-size: cover;
 }
