--- a/src/widgets/LeaveRequest/LeaveRequest.module.scss
+++ b/src/widgets/LeaveRequest/LeaveRequest.module.scss
@@ -25,7 +25,7 @@
 }
 
 .card {
-  background-image: url("../../data/images/modal-bg.png");
+  background-image: url("../../data/images/modal-bg.webp");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   max-width: rem(1060);
