--- a/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
+++ b/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
@@ -25,7 +25,7 @@
 }
 
 .card {
-  background-image: url("../../data/images/modal-bg2.png");
+  background-image: url("../../data/images/modal-bg2.webp");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   max-width: rem(1060);
@@ -45,7 +45,7 @@
     padding-top: rem(120);
   }
   @media (max-width: $max-600) {
-    background-image: url("../../data/images/modal-bg.png");
+    background-image: url("../../data/images/modal-bg.webp");
     min-width: rem(1160);
     min-height: rem(850);
   }
