--- a/src/widgets/HelloScreen/HelloScreen.module.scss
+++ b/src/widgets/HelloScreen/HelloScreen.module.scss
@@ -56,15 +56,17 @@
   z-index: 2;
 }
 .title {
-  @include noto(300);
-  font-size: rem(40);
+  @include gilroy(500);
+  font-size: rem(50);
   line-height: 1.3;
   color: #fff;
-  max-width: rem(570);
+  max-width: rem(730);
   width: 100%;
 
   @media (max-width: $max-700) {
     font-size: rem(24);
+    max-width: rem(400);
+    line-height: 1.3;
   }
 }
 .subtitle {
