--- a/src/widgets/HelloScreen/HelloScreen.module.scss
+++ b/src/widgets/HelloScreen/HelloScreen.module.scss
@@ -62,6 +62,7 @@
   color: #fff;
   max-width: rem(730);
   width: 100%;
+  margin-bottom: rem(10);
 
   @media (max-width: $max-700) {
     font-size: rem(24);
@@ -72,16 +73,20 @@
 .subtitle {
   display: flex;
   align-items: center;
-  margin-top: rem(8);
+  margin-top: rem(-10);
 }
 .subtitleIcon {
   width: rem(64);
 }
 .subtitleText {
-  @include noto(300);
-  font-size: rem(30);
+  @include gilroy(400);
+  font-size: rem(27);
   line-height: 1.3;
   color: #fff;
+
+  & span {
+    font-weight: 700;
+  }
 
   @media (max-width: $max-700) {
     margin-left: rem(-8);
