feat: добавлена страница мебели, добавлены блоки, добавлен базовый адаптив

--- a/src/widgets/Reviews/Reviews.module.scss
+++ b/src/widgets/Reviews/Reviews.module.scss
@@ -12,6 +12,11 @@
 	);
 	position: relative;
 }
+.reviewsPageWithoutBg {
+	padding-top: rem(150);
+	padding-bottom: rem(50);
+	position: relative;
+}
 
 .container {
 	@include container();
