--- a/src/widgets/Results/Results.module.scss
+++ b/src/widgets/Results/Results.module.scss
@@ -17,13 +17,7 @@
 	@include container();
 }
 .title {
-	@include noto(400);
-	color: #fff;
-	line-height: 1.3;
-	text-align: center;
-	font-size: rem(40);
-	position: relative;
-	z-index: 10;
+	@include title();
 }
 .bgText {
 	-webkit-user-select: none;
