--- a/src/widgets/SecondScreen/SecondScreen.module.scss
+++ b/src/widgets/SecondScreen/SecondScreen.module.scss
@@ -38,23 +38,7 @@
 	}
 }
 .title {
-	color: #fff;
-	@include noto(300);
-	font-size: rem(40);
-	line-height: 1.3;
-	text-align: center;
-	position: relative;
-	z-index: 10;
-	margin-top: rem(10);
-	margin-bottom: rem(10);
-
-	& span {
-		font-weight: 700;
-	}
-
-	@media (max-width: $max-800) {
-		font-size: rem(24);
-	}
+	@include title();
 }
 .card {
 	display: flex;
