--- a/src/widgets/FourSteps/FourSteps.module.scss
+++ b/src/widgets/FourSteps/FourSteps.module.scss
@@ -87,23 +87,16 @@
 	}
 
 	@media (max-width: $max-550) {
-		.variantNumber {
-			text-align: center;
-		}
-		.variantTitle {
-			text-align: center;
-		}
 		.variantDescription {
-			margin: 0 auto;
 			margin-top: rem(20);
 			margin-bottom: rem(300);
 		}
 		.variantImg {
-			left: 50%;
+			left: 70%;
 			transform: translateX(-50%);
 		}
 		.copyImage {
-			right: 50%;
+			right: 30%;
 			transform: translateX(50%);
 		}
 	}
@@ -133,24 +126,17 @@
 	}
 
 	@media (max-width: $max-550) {
-		.variantNumber {
-			text-align: center;
-		}
-		.variantTitle {
-			text-align: center;
-		}
 		.variantDescription {
-			margin: 0 auto;
 			margin-top: rem(20);
 			margin-bottom: rem(300);
 		}
 		.variantImg {
-			left: 50%;
+			left: 60%;
 			transform: translateX(-50%);
 			width: 110%;
 		}
 		.copyImage {
-			right: 50%;
+			right: 40%;
 			bottom: 5%;
 			transform: translateX(50%);
 		}
@@ -182,24 +168,18 @@
 	}
 
 	@media (max-width: $max-550) {
-		.variantNumber {
-			text-align: center;
-		}
-		.variantTitle {
-			text-align: center;
-		}
 		.variantDescription {
-			margin: 0 auto;
 			margin-top: rem(20);
-			margin-bottom: rem(400);
+			margin-bottom: rem(200);
 		}
 		.variantImg {
-			left: 50%;
+			left: 70%;
+			bottom: -20%;
 			transform: translateX(-50%);
 		}
 		.copyImage {
-			right: 50%;
-			bottom: 5%;
+			right: 10%;
+			bottom: -20%;
 			transform: translateX(50%);
 		}
 	}
@@ -232,23 +212,16 @@
 	}
 
 	@media (max-width: $max-550) {
-		.variantNumber {
-			text-align: center;
-		}
-		.variantTitle {
-			text-align: center;
-		}
 		.variantDescription {
-			margin: 0 auto;
 			margin-top: rem(20);
-			margin-bottom: rem(400);
+			margin-bottom: rem(300);
 		}
 		.variantImg {
-			left: 50%;
+			left: 70%;
 			transform: translateX(-50%);
 		}
 		.copyImage {
-			right: 50%;
+			right: 30%;
 			bottom: 5%;
 			transform: translateX(50%);
 		}
@@ -260,7 +233,7 @@
 	font-size: rem(16);
 	line-height: 1.5;
 	position: relative;
-	z-index: 3;
+	z-index: 10;
 	text-transform: uppercase;
 }
 .variantDescription {
@@ -269,12 +242,16 @@
 	@include gilroy(400);
 	line-height: 1.5;
 	position: relative;
-	z-index: 3;
+	z-index: 10;
 	max-width: rem(260);
 	margin-top: rem(14);
 
 	& span {
 		@include gilroy(600);
+	}
+
+	@media (max-width: $max-450) {
+		font-size: rem(14);
 	}
 }
 .variantNumber {
