--- a/src/widgets/FurnitureHelloScreen/FurnitureHelloScreen.module.scss
+++ b/src/widgets/FurnitureHelloScreen/FurnitureHelloScreen.module.scss
@@ -93,6 +93,11 @@
 	color: $white;
 	max-width: rem(660);
 	margin-top: rem(50);
+
+	@media (max-width: $max-500) {
+		font-size: rem(14);
+		max-width: rem(330);
+	}
 }
 
 .orangeButton {
