--- a/src/shared/IconsComponents/Icons.module.scss
+++ b/src/shared/IconsComponents/Icons.module.scss
@@ -1,14 +1,30 @@
-@import "@/shared/styles/_vars";
+@import '@/shared/styles/_vars';
 
 .rotateUp {
-  transform: rotate(-90deg);
-  @include gilroy(300);
-  font-size: rem(14);
-  line-height: 1;
+	transform: rotate(-90deg);
+	@include gilroy(400);
+	font-size: rem(20);
+	line-height: 1;
+	cursor: pointer;
 }
 .rotateDown {
-  transform: rotate(90deg);
-  @include gilroy(300);
-  font-size: rem(14);
-  line-height: 1;
+	transform: rotate(90deg);
+	@include gilroy(400);
+	font-size: rem(20);
+	line-height: 1;
+	cursor: pointer;
+}
+.rotateLeft {
+	transform: rotate(180deg);
+	@include gilroy(400);
+	font-size: rem(20);
+	line-height: 1;
+	cursor: pointer;
+}
+.rotateRight {
+	transform: rotate(0deg);
+	@include gilroy(400);
+	font-size: rem(20);
+	line-height: 1;
+	cursor: pointer;
 }
