--- a/src/widgets/FurnitureHelloScreen/FurnitureHelloScreen.module.scss
+++ b/src/widgets/FurnitureHelloScreen/FurnitureHelloScreen.module.scss
@@ -100,37 +100,6 @@
 	}
 }
 
-.orangeButton {
+.button {
 	margin-top: rem(50);
-	color: #fff;
-	font-weight: 700;
-	max-width: rem(270);
-	width: 100%;
-	@include orange-gradient();
-	padding: rem(20) rem(40);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	border-radius: rem(100);
-	font-size: rem(14);
-	text-transform: uppercase;
-	border: 1px solid transparent;
-	transition: border 0.2s linear;
-	text-decoration: none;
-	cursor: pointer;
-	position: relative;
-	z-index: 4;
-
-	&:hover {
-		border-color: rgba(255, 255, 255, 0.6);
-	}
-
-	@media (max-width: $max-768) {
-		margin-top: rem(100);
-		margin-bottom: rem(50);
-	}
-	@media (max-width: $max-450) {
-		margin: rem(100) auto rem(50);
-	}
 }
