--- a/src/widgets/MainArticles/MainArticles.module.scss
+++ b/src/widgets/MainArticles/MainArticles.module.scss
@@ -1,124 +1,93 @@
-@import "@/shared/styles/_vars";
+@import '@/shared/styles/_vars';
 
 .articlesBlock {
-  background: linear-gradient(
-    180deg,
-    #2d2928 -108.63%,
-    #2a2827 -56.54%,
-    #393632 -23.78%,
-    #312d2a -1.94%,
-    #35302c 17.86%,
-    #2d2928 112.16%
-  );
-  padding-top: rem(50);
-  position: relative;
-  padding-bottom: rem(50);
+	background: linear-gradient(
+		180deg,
+		#2d2928 -108.63%,
+		#2a2827 -56.54%,
+		#393632 -23.78%,
+		#312d2a -1.94%,
+		#35302c 17.86%,
+		#2d2928 112.16%
+	);
+	padding-top: rem(50);
+	position: relative;
+	padding-bottom: rem(50);
 }
 .container {
-  @include container();
+	@include container();
 }
 .titleWrapper {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 .error {
-  @include noto(400);
-  font-size: rem(24);
-  color: #fff;
-  text-align: center;
-  width: 100%;
+	@include noto(400);
+	font-size: rem(24);
+	color: #fff;
+	text-align: center;
+	width: 100%;
 }
 .title {
-  @include noto(400);
-  font-size: rem(40);
-  line-height: 1.3;
-  position: relative;
-  z-index: 2;
-  color: #fff;
-  text-align: center;
-  margin-bottom: rem(40);
+	@include noto(400);
+	font-size: rem(40);
+	line-height: 1.3;
+	position: relative;
+	z-index: 2;
+	color: #fff;
+	text-align: center;
+	margin-bottom: rem(40);
 
-  & span {
-    position: relative;
-    z-index: 2;
-    margin: 0 rem(10);
+	& span {
+		position: relative;
+		z-index: 2;
+		margin: 0 rem(10);
 
-    &::before {
-      content: "";
-      @include position-center();
-      width: rem(50);
-      height: rem(50);
-      border-radius: rem(50);
-      background-color: #7b402e;
-      z-index: -1;
-    }
-  }
+		&::before {
+			content: '';
+			@include position-center();
+			width: rem(50);
+			height: rem(50);
+			border-radius: rem(50);
+			background-color: #7b402e;
+			z-index: -1;
+		}
+	}
 
-  @media (max-width: $max-768) {
-    font-size: rem(24);
-    max-width: rem(390);
+	@media (max-width: $max-768) {
+		font-size: rem(24);
+		max-width: rem(390);
 
-    & span {
-      margin: 0 rem(6);
-    }
+		& span {
+			margin: 0 rem(6);
+		}
 
-    & span:before {
-      width: rem(30);
-      height: rem(30);
-    }
-  }
+		& span:before {
+			width: rem(30);
+			height: rem(30);
+		}
+	}
 }
 .articles {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  -moz-column-gap: rem(30);
-  column-gap: rem(30);
-  row-gap: rem(56);
-  margin: 0 auto;
-  justify-items: center;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: auto;
+	-moz-column-gap: rem(30);
+	column-gap: rem(30);
+	row-gap: rem(56);
+	margin: 0 auto;
+	justify-items: center;
 
-  @media (max-width: $max-1000) {
-    grid-template-columns: repeat(2, 1fr);
-  }
+	@media (max-width: $max-1000) {
+		grid-template-columns: repeat(2, 1fr);
+	}
 
-  @media (max-width: $max-768) {
-    grid-template-columns: 1fr;
-  }
+	@media (max-width: $max-768) {
+		grid-template-columns: 1fr;
+	}
 }
 
-.buttonWrapper {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  margin-top: rem(30);
-}
-.orangeButton {
-  color: #fff;
-  font-weight: 700;
-  max-width: rem(270);
-  @include orange-gradient();
-  padding: rem(30) rem(40);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: rem(12);
-  text-align: center;
-  border-radius: rem(100);
-  font-size: rem(14);
-  text-transform: uppercase;
-  text-decoration: none;
-  width: 100%;
-  transition: 0.2s;
-  cursor: pointer;
-  border: 1px solid rgba(255, 255, 255, 0);
-
-  & p {
-    font-size: rem(20);
-  }
-
-  &:hover {
-    border: 1px solid rgba(255, 255, 255, 0.6);
-  }
+.button {
+	margin-top: rem(30);
 }
