--- a/src/widgets/AdminClaim/AdminClaim.module.scss
+++ b/src/widgets/AdminClaim/AdminClaim.module.scss
@@ -1,90 +1,93 @@
-@import "@/shared/styles/_vars";
+@import '@/shared/styles/_vars';
 
 .claim {
-  background-color: $white;
-  padding: rem(12);
-  border-radius: rem(12);
-  @include gilroy(400);
-  cursor: default;
-  color: #111;
+	background-color: $white;
+	padding: rem(12);
+	border-radius: rem(12);
+	@include gilroy(400);
+	cursor: default;
+	color: #111;
 }
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
 }
 .buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: rem(10);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: rem(10);
 }
 .title {
-  font-size: rem(20);
-  cursor: text;
+	font-size: rem(20);
+	cursor: text;
 }
 .info {
-  margin-top: rem(10);
-  display: flex;
-  flex-direction: column;
-  gap: rem(10);
+	margin-top: rem(10);
+	display: flex;
+	flex-direction: column;
+	gap: rem(10);
 
-  @media (max-width: $max-1000) {
-    margin-top: rem(6);
-    gap: rem(6);
-  }
+	@media (max-width: $max-1000) {
+		margin-top: rem(6);
+		gap: rem(6);
+	}
 }
 .fieldWrapper {
-  display: flex;
-  align-items: center;
-  gap: rem(10);
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	gap: rem(10);
+	justify-content: space-between;
 
-  @media (max-width: $max-1000) {
-    justify-content: flex-start;
-  }
+	@media (max-width: $max-1000) {
+		justify-content: flex-start;
+	}
 }
 .fieldTitle {
-  cursor: text;
-  font-weight: 600;
+	cursor: text;
+	font-weight: 600;
+	white-space: nowrap;
+	display: inline;
 }
 .fieldValue {
-  cursor: text;
+	display: inline;
+	cursor: text;
+	margin-left: rem(10);
 }
 .fieldInfo {
-  display: flex;
-  align-items: center;
-  gap: rem(10);
+	display: inline-block;
+	align-items: center;
 }
 .button {
-  outline: none;
-  border: 0;
+	outline: none;
+	border: 0;
 
-  &:hover {
-    .icon path {
-      stroke: $accent1;
-    }
-  }
+	&:hover {
+		.icon path {
+			stroke: $accent1;
+		}
+	}
 
-  &.success {
-    .icon {
-      fill: green;
-    }
-  }
+	&.success {
+		.icon {
+			fill: green;
+		}
+	}
 }
 .icon {
-  transition: 0.2s;
-  color: transparent;
-  max-width: rem(30);
-  width: 100%;
+	transition: 0.2s;
+	color: transparent;
+	max-width: rem(30);
+	width: 100%;
 
-  & path {
-    transition: 0.2s;
-    stroke: #000;
-  }
+	& path {
+		transition: 0.2s;
+		stroke: #000;
+	}
 }
 .input {
-  border-bottom: 1px solid #000;
-  outline: none;
+	border-bottom: 1px solid #000;
+	outline: none;
 }
