--- a/src/widgets/Furniture/Furniture.module.scss
+++ b/src/widgets/Furniture/Furniture.module.scss
@@ -1,29 +1,29 @@
-@import "@/shared/styles/_vars";
+@import '@/shared/styles/_vars';
 
 .furniturePage {
-  padding-top: rem(50);
-  padding-bottom: rem(50);
+	padding-top: rem(50);
+	padding-bottom: rem(50);
 }
 
 .container {
-  @include container();
+	@include container();
 }
 
 .title {
-  @include title(300);
+	@include title(300);
 }
 
 .furnitures {
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(2, 49%);
-  grid-template-rows: auto;
-  gap: rem(20);
-  margin-top: rem(30);
-  max-width: rem(940);
-  width: 100%;
+	margin: 0 auto;
+	display: flex;
+	align-items: baseline;
+	justify-content: center;
+	gap: rem(30);
+	margin-top: rem(40);
+	width: 100%;
+	flex-wrap: wrap;
+}
 
-  @media (max-width: $max-900) {
-    grid-template-columns: 100%;
-  }
+.button {
+	margin-top: rem(30);
 }
