--- a/src/widgets/FurnitureItem/FurnitureItem.module.scss
+++ b/src/widgets/FurnitureItem/FurnitureItem.module.scss
@@ -1,171 +1,127 @@
-@import "@/shared/styles/_vars";
+@import '@/shared/styles/_vars';
 
 .furniture {
-  border-radius: rem(6);
-  width: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  height: 100%;
-  position: relative;
-  cursor: pointer;
-
-  &:first-child {
-    grid-area: one;
-  }
-
-  &:nth-child(2n) {
-    grid-area: two;
-  }
-
-  &:nth-child(3n) {
-    grid-area: three;
-  }
-
-  &:nth-child(4n) {
-    grid-area: four;
-  }
-
-  &:last-child {
-    grid-area: five;
-  }
+	max-width: rem(515);
+	width: 100%;
+	max-height: rem(500);
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	position: relative;
+	display: flex;
+	flex-direction: column;
 }
-
+.swiper {
+	width: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	max-height: rem(370);
+	height: 100%;
+	position: relative;
+}
 .betweenWrapper {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  gap: rem(4);
-}
-
-.tags {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: rem(10);
-
-  @media (max-width: $max-450) {
-    flex-direction: column;
-    align-items: flex-end;
-  }
+	display: flex;
+	align-items: flex-end;
+	justify-content: space-between;
+	gap: rem(4);
 }
 
 .content {
-  position: absolute;
-  bottom: rem(30);
-  left: 50%;
-  transform: translate(-50%, 0);
-  padding: 0 rem(60);
-  width: 100%;
-  z-index: 2;
-  color: #fff;
-  letter-spacing: rem(0.4);
+	margin-top: rem(14);
+	width: 100%;
+	z-index: 2;
+	color: #fff;
+	letter-spacing: rem(0.4);
 
-  @media (max-width: $max-450) {
-    padding: 0 rem(40);
-  }
+	@media (max-width: $max-450) {
+		padding: 0 rem(40);
+	}
 }
 
 .name {
-  @include gilroy(700);
-  font-size: rem(16);
-  line-height: 1.5;
-  cursor: text;
-  text-wrap: balance;
+	@include gilroy(700);
+	font-size: rem(22);
+	line-height: 1.5;
+	cursor: text;
+	text-wrap: balance;
 }
 
 .description {
-  @include gilroy(400);
-  font-size: rem(14);
-  line-height: 1.5;
-  margin-top: rem(16);
-  cursor: text;
-  @include strings(3);
+	@include gilroy(400);
+	font-size: rem(16);
+	line-height: 1.5;
+	margin-top: rem(8);
+	cursor: text;
+	@include strings(3);
 }
 
 .contentWrapper {
-  display: flex;
-  align-items: center;
-  margin-top: rem(14);
-  gap: rem(20);
+	display: flex;
+	align-items: center;
+	margin-top: rem(14);
+	gap: rem(20);
 
-  @media (max-width: $max-450) {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+	@media (max-width: $max-450) {
+		flex-direction: column;
+		align-items: flex-start;
+	}
 }
 
 .price {
-  @include noto(400);
-  line-height: 1.3;
-  font-size: rem(20);
-  cursor: text;
+	@include noto(400);
+	line-height: 1.3;
+	font-size: rem(22);
+	cursor: text;
 
-  & span {
-    font-size: rem(16);
+	& span {
+		&:last-child {
+			font-size: rem(18);
+		}
 
-    &.brown {
-      color: #73655b;
-      margin-right: rem(5);
-    }
-  }
+		&.brown {
+			color: #73655b;
+			margin-right: rem(5);
+		}
+	}
 }
-
-.tag {
-  @include gilroy(700);
-  font-size: rem(7);
-  text-transform: uppercase;
-  padding: rem(5) rem(12);
-  border-radius: rem(50);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  line-height: 2;
-  letter-spacing: rem(0.7);
-  position: relative;
-  z-index: 5;
-  white-space: nowrap;
-  background-color: rgba(40, 34, 26, 0.6);
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: rem(50);
-  }
-}
-
 .image {
-  width: 100%;
+	width: 100%;
+	max-height: rem(380);
+	height: 100%;
+	border-radius: rem(12);
+	overflow: hidden;
+}
+.pagination {
+	top: auto !important;
+	bottom: rem(14) !important;
 }
 
 .img {
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-mask-image: linear-gradient(
-    0deg,
-    rgb(40, 35, 32, 0.1) 0%,
-    rgba(40, 35, 32, 0.3) 25%,
-    rgba(40, 35, 32, 0.8) 50%,
-    rgba(40, 35, 32, 0.75) 75%,
-    rgba(40, 35, 32, 0.9) 100%
-  );
-  mask-image: linear-gradient(
-    0deg,
-    rgb(40, 35, 32, 0.1) 0%,
-    rgba(40, 35, 32, 0.3) 25%,
-    rgba(40, 35, 32, 0.8) 50%,
-    rgba(40, 35, 32, 0.75) 75%,
-    rgba(40, 35, 32, 0.9) 100%
-  );
+	-o-object-fit: cover;
+	object-fit: cover;
+	border-radius: rem(12);
+	width: 100%;
+	height: 100%;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+
+	-webkit-mask-image: linear-gradient(
+		0deg,
+		rgb(40, 35, 32, 0.7) 0%,
+		rgba(40, 35, 32, 0.7) 25%,
+		rgba(40, 35, 32, 0.7) 50%,
+		rgba(40, 35, 32, 0.7) 75%,
+		rgba(40, 35, 32, 0.7) 100%
+	);
+
+	mask-image: linear-gradient(
+		0deg,
+		rgb(40, 35, 32, 0.7) 0%,
+		rgba(40, 35, 32, 0.7) 25%,
+		rgba(40, 35, 32, 0.7) 50%,
+		rgba(40, 35, 32, 0.7) 75%,
+		rgba(40, 35, 32, 0.7) 100%
+	);
 }
