--- a/src/pages/ErrorPage.module.scss
+++ b/src/pages/ErrorPage.module.scss
@@ -1,98 +1,76 @@
-@import "@/shared/styles/_vars";
+@import '@/shared/styles/_vars';
 
 .page {
-  padding-top: rem(50);
-  padding-bottom: rem(50);
-  height: 100%;
-  min-height: 90vh;
-  background: linear-gradient(
-    180deg,
-    #282320 0%,
-    #322d29 25.78%,
-    #35302c 57.29%,
-    #2d2928 100%
-  );
-  width: 100%;
+	padding-top: rem(50);
+	padding-bottom: rem(50);
+	height: 100%;
+	min-height: 90vh;
+	background: linear-gradient(
+		180deg,
+		#282320 0%,
+		#322d29 25.78%,
+		#35302c 57.29%,
+		#2d2928 100%
+	);
+	width: 100%;
 }
 .container {
-  @include container();
-  width: 100%;
+	@include container();
+	width: 100%;
 }
 .wrapper {
-  padding-top: rem(150);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  gap: rem(50);
+	padding-top: rem(150);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 100%;
+	gap: rem(50);
 
-  @media (max-width: $max-768) {
-    flex-direction: column;
-    gap: rem(20);
-    padding-top: rem(80);
-  }
+	@media (max-width: $max-768) {
+		flex-direction: column;
+		gap: rem(20);
+		padding-top: rem(80);
+	}
 }
 .column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 .buttonWrapper {
-  display: flex;
-  width: 100%;
-  justify-content: center;
+	display: flex;
+	width: 100%;
+	justify-content: center;
 }
-.orangeButton {
-  color: #fff;
-  font-weight: 700;
-  max-width: rem(270);
-  @include orange-gradient();
-  padding: rem(30) rem(40);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: rem(12);
-  text-align: center;
-  border-radius: rem(100);
-  font-size: rem(14);
-  text-transform: uppercase;
-  text-decoration: none;
-  width: 100%;
-  margin-top: rem(20);
-  transition: 0.2s;
-  cursor: pointer;
-  border: 1px solid rgba(255, 255, 255, 0);
-
-  &:hover {
-    border: 1px solid rgba(255, 255, 255, 0.6);
-  }
+.button {
+	margin-top: rem(20);
 }
 .title {
-  @include noto(400);
-  font-size: rem(20);
-  text-align: center;
-  color: #fff;
-  margin-left: rem(30);
+	@include noto(400);
+	font-size: rem(20);
+	text-align: center;
+	color: #fff;
+	margin-left: rem(30);
 
-  @media (max-width: $max-768) {
-    margin-left: 0;
-  }
+	@media (max-width: $max-768) {
+		margin-left: 0;
+	}
 }
 .errorImg {
-  margin-top: rem(10);
-  max-width: rem(515);
-  width: 100%;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	margin-top: rem(10);
+	max-width: rem(515);
+	width: 100%;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .kitchenImg {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  max-width: rem(370);
-  width: 100%;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	max-width: rem(370);
+	width: 100%;
 }
