--- a/src/widgets/FurnitureItem/FurnitureItem.module.scss
+++ b/src/widgets/FurnitureItem/FurnitureItem.module.scss
@@ -86,10 +86,10 @@
 .image {
 	width: 100%;
 	height: rem(370);
+	position: relative;
 
 	@media screen and (max-width: $max-600) {
-		height: 100%;
-		max-height: rem(240);
+		height: rem(240);
 	}
 }
 .pagination {
@@ -100,6 +100,8 @@
 .img {
 	-o-object-fit: cover;
 	object-fit: cover;
+	-o-object-position: center;
+	object-position: center;
 	border-radius: rem(12);
 	width: 100%;
 	height: 100%;
