--- a/src/shared/ui/OrangeButton/OrangeButton.module.scss
+++ b/src/shared/ui/OrangeButton/OrangeButton.module.scss
@@ -1,36 +1,43 @@
-@import '@/shared/styles/_vars';
+@import "@/shared/styles/_vars";
 
 .button {
-	color: #fff;
-	font-weight: 700;
-	max-width: rem(270);
-	min-height: rem(70);
-	width: 100%;
-	@include orange-gradient();
-	padding: rem(15) rem(20);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	border-radius: rem(100);
-	font-size: rem(14);
-	text-transform: uppercase;
-	border: 1px solid transparent;
-	transition: border 0.2s linear;
-	text-decoration: none;
-	cursor: pointer;
-	position: relative;
-	z-index: 4;
+  color: #fff;
+  font-weight: 700;
+  max-width: rem(270);
+  min-height: rem(70);
+  width: 100%;
+  @include orange-gradient();
+  padding: rem(15) rem(20);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: rem(100);
+  font-size: rem(14);
+  text-transform: uppercase;
+  border: 1px solid transparent;
+  transition: border 0.2s linear;
+  text-decoration: none;
+  cursor: pointer;
+  position: relative;
+  z-index: 4;
 
-	&:hover {
-		border-color: rgba(255, 255, 255, 0.6);
-	}
+  &:hover {
+    border-color: rgba(255, 255, 255, 0.6);
+  }
 
-	&.arrow {
-		gap: rem(6);
-	}
+  &.arrow {
+    gap: rem(6);
+  }
 
-	&.center {
-		margin: 0 auto;
-	}
+  &.center {
+    margin: 0 auto;
+  }
+
+  &[disabled] {
+    opacity: 0.8;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    cursor: not-allowed;
+  }
 }
